<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    android:id="@+id/cardView"
    card_view:cardUseCompatPadding="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2">

        <FrameLayout
            android:id="@+id/separadorLinea1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" >
        </FrameLayout>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/espacioVacio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewNombreProducto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreProducto"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrecioProducto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioProducto"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="19sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/botonBorrar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonBorrar" />

        </TableRow>

        <TableRow
            android:id="@+id/separadorCabecera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/separadorLinea"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_span="6"
                android:background="#000000" >
            </FrameLayout>

        </TableRow>

    </TableLayout>

</androidx.cardview.widget.CardView>
